shaders draw point

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>WebGL</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    Hello<br>
+<body onload="main()">
     <canvas id="cnv"></canvas>
     <script src="script.js"></script>
 </body>
