--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body onload="main()">
     <canvas id="cnv"></canvas>
+    <br>
+    <button id="start_button" onclick="start()">Start</button>
+    <button id="stop_button" onclick="stop()" disabled>Stop</button>
+
+    <script src="lib/cuon-matrix.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
