view matrix, axes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,28 @@
     <br>
     <button id="start_button" onclick="start()">Start</button>
     <button id="stop_button" onclick="stop()" disabled>Stop</button>
+    <br><br>
+    View Rotate
+    <br>
+    <button onclick="rotate_m_x_button()">-X</button>
+    <button onclick="rotate_p_x_button()">+X</button>
+    <br>
+    <button onclick="rotate_m_y_button()">-Y</button>
+    <button onclick="rotate_p_y_button()">+Y</button>
+    <br>
+    <button onclick="rotate_m_z_button()">-Z</button>
+    <button onclick="rotate_p_z_button()">+Z</button>
+    <br><br>
+    View Translate
+    <br>
+    <button onclick="translate_m_x_button()">-X</button>
+    <button onclick="translate_p_x_button()">+X</button>
+    <br>
+    <button onclick="translate_m_y_button()">-Y</button>
+    <button onclick="translate_p_y_button()">+Y</button>
+    <br>
+    <button onclick="translate_m_z_button()">-Z</button>
+    <button onclick="translate_p_z_button()">+Z</button>
 
     <script src="lib/cuon-matrix.js"></script>
     <script src="script.js"></script>
